@@ -29,6 +29,7 @@ charset
 em 1 \033X\147
 hy 1 -
 \- 1 -
+rs 1 %\134
 bu 1 \033X\127
 sq 1 \033X\115
 ru 1 \033X\147
