@@ -47,7 +47,7 @@ biggestfont 200
 charset
 hy ct fi fl ff Fi Fl dg em 14 34 12 \- en \' aa
 \` ga ru sc dd -> \e br Sl ps cs cy as os =. ld
-rd le ge pp -+
+rd le ge pp -+ rs
 sq bx ci fa te ** pl mi \< eq \> ~= *A *B *X *D
 *E *F *G *Y *I *K *L *M *N *O *P *R *H *S *T *U
 *W *C *Q *Z ul \_ rn *a *b *x *d *e *f *g *y *i
